# dotnet-csd

./: .coveragerc  .dockerignore  .ebignore  .gitignore  .sourcery.yaml  .terraform.lock.hcl  Dockerfile  Makefile  Procfile  README.md  app.py  csd.sln  docker-compose.yml  main.tf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  qodana.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  csd.yml  docker-publish.yml  dotnet.yml  linting.yml  main_alex-csd.yml  playwright.yml  qodana_code_quality.yml  review.yml  semgrep.yml  sourcery.yml  terraform-apply.yml  terraform-plan.yml
PlaywrightTests/: PlaywrightTests.csproj
app/: Dockerfile  Program.cs  app.csproj
app/Data/: WeatherForecastService.cs
app/Pages/: Error.cshtml  FetchData.razor
app/Properties/: launchSettings.json
csd/: _Imports.razor
csd-tests/: UnitTest1.cs  csd-tests.csproj
csd/Data/: WeatherForecast.cs
csd/Pages/: Error.cshtml.cs  _Host.cshtml
csd/Shared/: MainLayout.razor  NavMenu.razor
cypress/e2e/: spec.cy.js
load_tests/: main.js
specs/Drivers/: Driver.cs
specs/Features/: Calculator.feature.cs
specs/Hooks/: Hook.cs
specs/Steps/: CalculatorStepDefinitions.cs
src/: blood_pressure.py  forms.py  root.py
src/templates/: 500_generic.html  _formhelpers.html  content.html  layout.html  success.html
static/css/: main.css  main.css.map
static/js/: main.js.map
tests/: blood_pressure_test.py  conftest.py  root_test.py
tests/bdd/: blood_pressure_scenario_test.py
tests/bdd/features/: blood_pressure.feature
tests/unit/: blood_pressure_test.py  root_test.py
webapp/: Dockerfile  Program.cs  webapp.csproj
webapp/Data/: WeatherForecast.cs  WeatherForecastService.cs
webapp/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  _Host.cshtml
webapp/Properties/: launchSettings.json
webapp/Shared/: MainLayout.razor  NavMenu.razor
