[tool.poetry]
name = "csd"
version = "0.1.0"
description = ""
authors = ["Alexandru Constantin Cardas <calexc@alviralex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
