[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alexandru Constantin Cardas <calexc@alviralex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
flask = "^3.0.0"
flask-wtf = "^1.2.1"
matplotlib = "^3.8.2"
flask-talisman = "^1.1.0"
aws-xray-sdk = "^2.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
semgrep = "^1.51.0"
sourcery = "^1.14.0"
mypy = "^1.8.0"
djlint = "^1.34.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-bdd = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["ALL"]
src = ["src", "tests"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]

[tool.coverage.run]
relative_files = true
source = ["src/"]
branch = true
concurrency = ["multiprocessing"]
parallel = true
sigterm = true
omit = ["tests/*"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "src/experimental", "src/typestubs"]
defineConstant = { DEBUG = true }

reportUnusedFunction = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedVariable = true
reportDuplicateImport = true
strictListInference = true
reportMissingImports = true
reportMissingTypeStubs = false
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true
reportConstantRedefinition = true
reportShadowedImports = true
reportUnusedExpression = true
reportGeneralTypeIssues = false

pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
